--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<meta http-equiv="refresh" content="0; url=https://www.leekHotline.com"/>
-
-<div>
-  <h1>Hi There</h1>
-</div>
+<!-- ✅ 修复后的代码 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://www.leekHotline.com">
+</head>
+<body>
+    <div>
+        <h1>Hi There</h1>
+        <p>Redirecting to LeekHotline...</p>
+    </div>
+</body>
+</html>
