--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!-- ✅ 修复后的代码 -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://www.leekHotline.com">
+    <meta charset="utf-8">
+    <title>Your GitHub Page</title>
 </head>
 <body>
-    <div>
-        <h1>Hi There</h1>
-        <p>Redirecting to LeekHotline...</p>
+    <div style="text-align: center; padding: 50px;">
+        <h1>👋 你好！</h1>
+        <p>这是我的 GitHub Pages 页面</p>
+        <p>原计划重定向到 LeekHotline，但该网站目前有技术问题。</p>
+        <p><a href="https://www.leekhotline.com" style="color: red;">尝试访问 LeekHotline（可能有错误）</a></p>
     </div>
 </body>
 </html>
