this project was already has built and deployed

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Your GitHub Page</title>
-</head>
-<body>
-    <div style="text-align: center; padding: 50px;">
-        <h1>👋 你好！</h1>
-        <p>这是我的 GitHub Pages 页面</p>
-        <p>原计划重定向到 LeekHotline，但该网站目前有技术问题。</p>
-        <p><a href="https://www.leekhotline.com" style="color: red;">尝试访问 LeekHotline（可能有错误）</a></p>
-    </div>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>leekhotline-github-io</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
